--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: minima
-title: Test
-author: 07U
-description: Testing
+title: Quaternions - An Explanation From All Angles
+author: Oz Davidi
