--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 title: "Quaternions - An Explanation From All Angles"
 author: "Oz Davidi"
-description: ""
+description: "On The Connection Between 3D Rotations And Quaternions"
